[gd_scene load_steps=179 format=2]

[ext_resource path="res://player/player_still.png" type="Texture" id=1]
[ext_resource path="res://player/player_dash.png" type="Texture" id=2]
[ext_resource path="res://player/player_reload.png" type="Texture" id=3]
[ext_resource path="res://player/Player.gd" type="Script" id=4]
[ext_resource path="res://player/player_dash_reflect.png" type="Texture" id=5]
[ext_resource path="res://player/player_death.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 800, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1000, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1200, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1400, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1600, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1800, 200, 200 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2000, 200, 200 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2200, 200, 200 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2400, 200, 200 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2600, 200, 200 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2800, 200, 200 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3000, 200, 200 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3200, 200, 200 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3400, 200, 200 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3600, 200, 200 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3800, 200, 200 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 800, 200, 200 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1000, 200, 200 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 200, 200 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1400, 200, 200 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1600, 200, 200 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1800, 200, 200 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2000, 200, 200 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2200, 200, 200 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2400, 200, 200 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2600, 200, 200 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 2800, 200, 200 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3000, 200, 200 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3200, 200, 200 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3400, 200, 200 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3600, 200, 200 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 3800, 200, 200 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 4000, 200, 200 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 4200, 200, 200 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 4400, 200, 200 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 4600, 200, 200 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 4800, 200, 200 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 800, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1600, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3200, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4000, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5600, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 6400, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 7200, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8000, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8800, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 9600, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 10400, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 11200, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 12000, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 12800, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 13600, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 14400, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 15200, 0, 800, 800 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 800, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1600, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3200, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4000, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5600, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 6400, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 7200, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8000, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8800, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 9600, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 10400, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 11200, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 12000, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 12800, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 13600, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 14400, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 15200, 800, 800, 800 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 800, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1600, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3200, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4000, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5600, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 6400, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 7200, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8000, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8800, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 9600, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 10400, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 11200, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 12000, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 12800, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 13600, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 14400, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 15200, 1600, 800, 800 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 800, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1600, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3200, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4000, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5600, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 6400, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 7200, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8000, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8800, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 9600, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 10400, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 11200, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 12000, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 12800, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 13600, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 14400, 2400, 800, 800 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 15200, 2400, 800, 800 )

[sub_resource type="SpriteFrames" id=126]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "reload",
"speed": 60.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "still",
"speed": 0.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "dash",
"speed": 60.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ) ],
"loop": false,
"name": "death",
"speed": 60.0
} ]

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 540, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=129]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1080, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=130]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1620, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=131]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2160, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=132]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2700, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=133]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3240, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=134]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3780, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4320, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4860, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=137]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5400, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=138]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5940, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=139]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6480, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=140]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 7020, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=141]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 7560, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=142]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 8100, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=143]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 8640, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=144]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 9180, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=145]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 9720, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=146]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 10260, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=147]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 10800, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=148]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 11340, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=149]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 11880, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=150]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 12420, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=151]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 12960, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=152]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 13500, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=153]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 14040, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=154]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 14580, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=155]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 15120, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=156]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 15660, 0, 540, 540 )

[sub_resource type="AtlasTexture" id=157]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=158]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 540, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=159]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1080, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=160]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1620, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=161]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2160, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=162]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2700, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=163]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3240, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=164]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3780, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=165]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4320, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=166]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4860, 540, 540, 540 )

[sub_resource type="AtlasTexture" id=167]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5400, 540, 540, 540 )

[sub_resource type="SpriteFrames" id=168]
animations = [ {
"frames": [ SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ) ],
"loop": false,
"name": "reflect",
"speed": 60.0
} ]

[sub_resource type="CircleShape2D" id=169]
radius = 44.0

[sub_resource type="CircleShape2D" id=170]
radius = 135.0

[sub_resource type="CircleShape2D" id=171]
radius = 19.0

[sub_resource type="Animation" id=172]
length = 0.6
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("ReflectArea/Reflectbox:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.5, 0, 0, 0, 0.5, 1, -0.1, 0, 0, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ReflectArea/Reflectbox:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.5, 0, 0, 0, 0.5, 1, -0.1, 0, 0, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 126 )
animation = "death"

[node name="DashReflectAnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 168 )
animation = "reflect"
frame = 40

[node name="HitArea" type="Area2D" parent="."]
pause_mode = 1
collision_layer = 0
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="HitArea"]
pause_mode = 1
shape = SubResource( 169 )

[node name="ReflectArea" type="Area2D" parent="."]
pause_mode = 1
collision_mask = 0

[node name="Reflectbox" type="CollisionShape2D" parent="ReflectArea"]
pause_mode = 1
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 170 )
disabled = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 171 )

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 3.2

[node name="DashTime" type="Timer" parent="."]
wait_time = 0.4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Reflect = SubResource( 172 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="HitArea" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="DashTime" to="." method="_on_DashTime_timeout"]
